https://trello.com/c/s7xdTBGz/494-ui-header: Ensure height of collapsed menu aligned.

--- a/ckanext/bpatheme/fanstatic/styles/bpatheme.css
+++ b/ckanext/bpatheme/fanstatic/styles/bpatheme.css
@@ -533,6 +533,7 @@ body {
 @media screen and (max-width: 990px) {
   .site-title .topnav {
     flex-direction: column;
+    align-items: flex-end;
   }
 }
 
